--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -36,7 +36,7 @@
                 <% for speaker in article.unique_speakers %>
                     <% if speaker.avatar.attached? %>
                         <div class="photo-wrapper" title="<%= speaker.full_name %>">
-                          <img class="lazy-load" data-src="<%= speaker.avatar %>">
+                          <img class="lazy-load" data-src="<%= url_for(speaker.avatar) %>">
                         </div>
                     <% end %>
                 <% end %>
