--- a/app/views/shared/_speaker_stat.html.erb
+++ b/app/views/shared/_speaker_stat.html.erb
@@ -4,7 +4,7 @@
       <% if speaker.avatar.attached? %>
         <div class="photo-wrapper">
           <% if local_assigns[:lazy_load_images] == false %>
-            <img class="lazy-load" data-src="<%= speaker.avatar %>" alt="<%= speaker.full_name %>">
+            <img class="lazy-load" data-src="<%= url_for(speaker.avatar) %>" alt="<%= speaker.full_name %>">
           <% else %>
             <%= image_tag(speaker.avatar, alt: speaker.full_name) %>
           <% end %>
