Post beta merge fixes

--- a/app/views/shared/_portrait.html.erb
+++ b/app/views/shared/_portrait.html.erb
@@ -1,9 +1,9 @@
-<% if speaker.portrait %>
+<% if speaker.avatar.attached? %>
   <figure class="portrait">
     <% if local_assigns[:lazy_load_images] == false %>
-      <img class="lazy-load" data-src="<%= speaker_portrait(speaker.portrait) %>" alt="<%= speaker.full_name %>">
+      <img class="lazy-load" data-src="<%= url_for(speaker.avatar) %>" alt="<%= speaker.full_name %>">
     <% else %>
-      <%= image_tag(speaker_portrait(speaker.portrait), alt: speaker.full_name) %>
+      <%= image_tag(speaker.avatar, alt: speaker.full_name) %>
     <% end %>
   </figure>
 <% end %>
