--- a/app/assets/stylesheets/admin/homepage.scss
+++ b/app/assets/stylesheets/admin/homepage.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "react-select/scss/default.scss";
+
 body {
   font-size: .875rem;
 }
