--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -16,7 +16,7 @@
 
         <% @article.segments.each do |segment| %>
           <% if segment.is_text? %>
-            <%= raw(segment.segment.text) %>
+            <%= raw(segment.text) %>
           <% else %>
             <%= render(partial: "statement/detail", collection: segment.published_statements, as: :statement) %>
           <% end %>
@@ -33,13 +33,15 @@
 <% if @article_type == "factcheck" %>
   <aside class="meta">
     <p>
-      <%= @article.source.medium.name %>
-      <% if @article.source.source_url %>
-          (<a class="ext" href="<%= @article.source.source_url %>">záznam</a>)
+      <% if @article.source %>
+        <%= @article.source.medium.name %>
+        <% if @article.source.source_url %>
+            (<a class="ext" href="<%= @article.source.source_url %>">záznam</a>)
+        <% end %>
+        <br>
+        Moderátor: <%= @article.source.media_personality.name %><br>
       <% end %>
-      <br>
-      Moderátor: <%= @article.source.media_personality.name %><br>
-      Publikováno <%= raw(l(@article.published_at, format: :long)) %>
+      Publikováno <%= @article.published_at ? raw(l(@article.published_at, format: :long)) : "Dosud nepublikováno" %>
     </p>
 
     <% @article.unique_speakers.each do |speaker| %>
