--- a/app/views/statement/_small.html.erb
+++ b/app/views/statement/_small.html.erb
@@ -3,7 +3,7 @@
 
   <div>
     <p class="name">
-      <span class="veracity <%= statement.correct_assessment.veracity.default_name %>"></span>
+      <span class="veracity <%= statement.approved_assessment.veracity.default_name %>"></span>
       <a href="<%= speaker_path(statement.speaker.id) %>">
         <%= statement.speaker.full_name %>
       </a>
