--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -14,7 +14,7 @@
 <article>
   <h2>Odůvodnění</h2>
   <section class="reasons">
-    <%= raw(@statement.approved_assessment.explanation) %>
+    <%= raw(@statement.approved_assessment.explanation_html) %>
   </section>
 </article>
 
