Fix failing tests

--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -26,6 +26,6 @@
   </p>
 
   <section class="reasons">
-    <%= raw(statement.approved_assessment.explanation) %>
+    <%= raw(statement.approved_assessment.explanation_html) %>
   </section>
 </article>
