--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -14,7 +14,7 @@
     { href: rss_index_path(format: :atom), type: 'application/rss+xml', title: 'RSS' },
   ],
   image_src: defined?(@article) ?
-      article_illustration(@article.illustration, @article.article_type.name) :
+      @article.illustration.attached? ? url_for(@article.illustration) : nil :
       asset_path("apple-touch-icon.png"),
   icon: [
     { href: asset_path('favicon.png'), sizes: '64x64', type: 'image/png' },
