--- a/app/assets/stylesheets/admin/homepage.scss
+++ b/app/assets/stylesheets/admin/homepage.scss
@@ -3,8 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "normalize.css/normalize";
+
+// Note that Blueprint icons are loaded separately by Webpack, because
+// assets pipeline does not load the Blueprint Icons16 font family correctly
 @import "@blueprintjs/core/lib/css/blueprint";
-@import "@blueprintjs/icons/lib/css/blueprint-icons";
+@import "@blueprintjs/datetime/lib/css/blueprint-datetime";
 
 @import "react-select/scss/default.scss";
 
