--- a/app/assets/stylesheets/admin/homepage.scss
+++ b/app/assets/stylesheets/admin/homepage.scss
@@ -11,6 +11,8 @@
 
 @import "react-select/scss/default.scss";
 
+// Load all the blueprint's variables
+@import "@blueprintjs/core/lib/scss/variables";
 
 body {
   font-size: .875rem;
@@ -36,6 +38,48 @@ body {
 
   &:active {
     background-image: asset-url("buttons/btn_google_signin_dark_pressed_web.png");
+  }
+}
+
+.sidebar {
+  position: fixed;
+  height: 100vh;
+  width: 270px;
+  background-color: $light-gray5;
+  box-shadow: 1px 0 0 rgba(16, 22, 26, .15);
+  overflow-y: auto;
+  padding: 0 15px;
+
+  .sidebar-menu-title {
+    padding-left: 15px;
+    margin-top: 30px;
+
+    text-transform: uppercase;
+    color: $gray2;
+    font-size: 11px;
+    font-weight: bold;
+  }
+
+  .sidebar-menu {
+    .pt-menu-item {
+      padding: 5px 15px;
+    }
+
+    .pt-menu-item.pt-active {
+      background-color: transparent;
+      color: $pt-intent-primary;
+      font-weight: bold;
+    }
+
+    .pt-menu-item:hover {
+      background-color: transparent;
+      font-weight: bold;
+    }
+
+    .pt-menu-item.pt-disabled {
+      background-color: transparent;
+      font-weight: normal;
+    }
   }
 }
 
