Standardization of forms

--- a/app/assets/stylesheets/admin/homepage.scss
+++ b/app/assets/stylesheets/admin/homepage.scss
@@ -83,6 +83,12 @@ body {
   }
 }
 
+.forms-controls-dateinput {
+  .DayPicker-Day--today {
+    font-weight: bold;
+    color: $red3;
+  }
+}
 
 /*
  * Utilities
