--- a/app/views/admin/homepage/index.html.erb
+++ b/app/views/admin/homepage/index.html.erb
@@ -1,14 +1,14 @@
 <% if user_signed_in? %>
   <div id="app-root" />
 <% else %>
-  <div class="container">
-    <h3 class="text-center" style="margin-top: 30px">Přihlášení</h3>
+  <div style="text-align: center;">
+    <h3 style="margin-top: 30px">Přihlášení</h3>
 
-    <p class="text-center" style="margin-top: 60px; margin-bottom: 60px;">
+    <div style="margin-top: 60px; margin-bottom: 60px;">
       <a class="google-signin-btn" href="<%= user_google_oauth2_omniauth_authorize_path %>"></a>
-    </p>
+    </div>
 
-    <p class="text-center">
+    <p>
       <small >
         Pokud máte s přihlášením problémy, kontaktujte <a href="mailto:admin@demagog.cz">správce</a>.
       </small>
