--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,13 +19,13 @@
 
   <body>
     <% if notice %>
-      <div class="alert alert-success">
+      <div class="pt-callout pt-intent-success">
         <%= notice %>
       </div>
     <% end %>
 
     <% if alert %>
-      <div class="alert alert-warning">
+      <div class="pt-callout pt-intent-warning">
         <strong>Upozornění:</strong> <%= alert %>
       </div>
     <% end %>
