Process styles with webpacker so blueprint icons work + added emotion

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,10 +11,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#f04124"/>
 
-    <%= stylesheet_link_tag 'admin/homepage', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <link rel="shortcut icon" href="<%= asset_path("favicon.png") %>" type="image/x-icon" />
     <!-- Add apple touch icon -->
+
+    <%= stylesheet_pack_tag 'admin'  %>
   </head>
 
   <body>
