--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -121,6 +121,15 @@ blockquote {
   }
 }
 
+ul.bare-list {
+  padding: 0;
+
+  li {
+    list-style-type: none;
+    margin-bottom: 0.25rem;
+  }
+}
+
 nav {
   ul { padding: 0; }
   li { 
