--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -30,7 +30,7 @@
   %>
 
   <h2>Zmíněno</h2>
-  <ul>
+  <ul class="bare-list">
   <% @statement.articles.each do |article| %>
     <li><%= link_to(article.title, article_path(article)) %></li>
   <% end %>
