Like button (still shabby)

--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -8,7 +8,7 @@
 
       <%= render(partial: 'shared/stats', object: @stats, as: :stats) %>
 
-      <iframe src="http://www.facebook.com/plugins/like.php?href=http://demagog.cz/diskusie/269/sobotka-vs-fiala&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=30" style="border:none; overflow:hidden; width:450px; height:30px;"></iframe>
+      <iframe src="http://www.facebook.com/plugins/like.php?href=http://demagog.cz/diskusie/269/sobotka-vs-fiala&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=30" style="border:none; overflow:hidden; width:450px; height:30px; margin-top: 1rem"></iframe>
     </div>
   </section>
 
