--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,5 @@
 <footer data-theme="dark">
-  <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+  <div class="container">
+    <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+  </div>
 </footer>
