Fix admin styles after Blueprint version bump

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,13 +21,13 @@
 
   <body>
     <% if notice %>
-      <div class="pt-callout pt-intent-success">
+      <div class="bp3-callout bp3-intent-success">
         <%= notice %>
       </div>
     <% end %>
 
     <% if alert %>
-      <div class="pt-callout pt-intent-warning">
+      <div class="bp3-callout bp3-intent-warning">
         <strong>Upozornění:</strong> <%= alert %>
       </div>
     <% end %>
