--- a/app/assets/stylesheets/_nav.scss
+++ b/app/assets/stylesheets/_nav.scss
@@ -117,6 +117,10 @@
     }
   }
 
+  .hamburger-icon {
+    height: 12px;
+  }
+
   @media only screen and (max-width: 899.9px) {
     & {
       display: block;
