--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -35,6 +35,19 @@
   #twitter, #facebook {
     display: none;
   }
+
+  .statement-detail .statement-content blockquote {
+    margin-top: 0;
+
+    &.oneliner-statement {
+      margin-top: 0;
+    }
+
+    // Hide CSS arrow
+    &:after {
+      display: none;
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -161,6 +174,18 @@
 
   .statement-detail {
     grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-column-gap: var(--gap);
+
+    .speaker {
+      grid-column: 1 / 3;
+      align-self: flex-start;
+    }
+
+    .statement-content {
+      grid-column: 3 / 11;
+    }
   }
 
   .meta {
