--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,6 @@
 
     <%= javascript_pack_tag 'application'  %>
     <%= render partial: "shared/ga" %>
+    <%= render partial: "shared/hotjar" %>
   </body>
 </html>
