--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,9 +1,7 @@
 <% content_for(:title, @page.title) %>
 
-<article class="full-text">
-  <h1><%= @page.title %></h1>
-
-  <section class="segment">
-    <%= raw(@page.text_html) %>
-  </section>
-</article>
+<% if @page.template == 'about_us' %>
+  <%= render('page/templates/about_us', page: @page) %>
+<% else %>
+  <%= render('page/templates/default', page: @page) %>
+<% end %>
