Show full statement explanation right by the statement so user does not have to jump to statement detail

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -350,15 +350,11 @@ p.lead {
 
   .reasons-short {
     margin-top: 0.4rem;
+    margin-bottom: 0.3rem;
 
     p {
       margin: 0;
     }
-  }
-
-  .show-full-explanation {
-    display: inline-block;
-    margin-top: 0.4rem;
   }
 
   .show-reasons .collapsed { display: none; }
