--- a/app/views/shared/_authors.html.erb
+++ b/app/views/shared/_authors.html.erb
@@ -1,5 +1,5 @@
 <section class="authors">
-  <h1>Kdo připravuje demagog.cz?</h1>
+  <h2>Kdo připravuje Demagog.cz?</h2>
  
   <% @users.each do |user| %>
     <article class="author">
